--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ts/restclient",
+    "name": "tommysack/restclient",
     "type": "typo3-cms-extension",
     "description": "A client to consume RESTful Web Services",
     "homepage": "https://typo3.org/extensions/repository/view/restclient",
@@ -16,7 +16,7 @@
     "support": {
         "issues": "https://forge.typo3.org/projects/extension-restclient"
     },
-    "version": "2.0.6",
+    "version": "3.0.0",
     "replace": {
         "restclient": "self.version",
         "typo3-ter/restclient": "self.version"
